# aiogram-inline-paginations

./: .gitignore  README.md  pyproject.toml  setup.py
aiogram-inline-paginations/: paginator.py
aiogram_inline_paginations/: paginator.py
exemple/: bot.py  bot_check_box_pagination.py
