[tool.poetry]
name = "aiogram-inline-paginations"
readme = 'README.md'
repository = 'https://github.com/daniilshamraev/aiogram-inline-paginations'
version = "0.1.10"
description = "A simple library for aiogram that allows you to easily do pagination for any Inline keyboards."
license = 'MIT'
authors = ["Daniil Shamraev <shamraev.2002@gmail.com>"]
packages = [
    { include = "aiogram_inline_paginations" }
]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^65.7.0"
pip = "^22.1.2"
wheel = "^0.38.4"
aiogram = "^3.0.0b6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
